--- a/.docker/php/php.ini
+++ b/.docker/php/php.ini
@@ -1030,7 +1030,7 @@ cli_server.color = On
 ; writing directly to the schema, shadow tables (eg. FTS data tables), or
 ; the sqlite_dbpage virtual table.
 ; https://www.sqlite.org/c3ref/c_dbconfig_defensive.html
-; (for older SQLite versions, this flag has no use)
+; (for older SQLites, this flag has no use)
 ;sqlite3.defensive = 1
 
 [Pcre]
